# openapi.yaml
@@ -432,8 +432,6 @@ paths:
       tags:
         - normal
       responses:
-        410:
-          '$ref': '#/components/responses/ResourceGone' 
         401:
           '$ref': '#/components/responses/InvalidCredentialsErrorResponse'        
         403:
@@ -462,8 +460,6 @@ paths:
       tags:
         - normal
       responses: 
-        410:
-          '$ref': '#/components/responses/ResourceGone'
         401:
           '$ref': '#/components/responses/InvalidCredentialsErrorResponse'        
         403:
